--- a/style.css
+++ b/style.css
@@ -39,8 +39,23 @@
 
 /* Form styling */
 
+.content-container {
+    display: grid;
+    grid-template-columns: 5% 1fr 1fr 10%;
+}
+
 img {
     background-color: grey;
     height: 100vh;
     width: 250px;
+    grid-column: 2;
+    justify-self: end;
+}
+
+.form-container {
+    background-color: silver;
+    height: 100vh;
+    width: 350px;
+    grid-column: 3;
+    justify-self: start;
 }
