--- a/style.css
+++ b/style.css
@@ -41,21 +41,29 @@
 
 .content-container {
     display: grid;
-    grid-template-columns: 5% 1fr 1fr 10%;
+    grid-template-columns: 5% 1fr 1fr 15%;
 }
 
 img {
     background-color: grey;
     height: 100vh;
-    width: 250px;
+    width: 300px;
     grid-column: 2;
     justify-self: end;
 }
 
 .form-container {
-    background-color: silver;
+    display: grid;
+    background-color: lightgray;
     height: 100vh;
-    width: 350px;
+    width: 450px;
     grid-column: 3;
     justify-self: start;
+}
+
+form {
+    width: 100%;
+    height: 200px;
+    background-color: white;
+    align-self: center;
 }
