--- a/style.css
+++ b/style.css
@@ -53,5 +53,12 @@ img {
     height: 100vh;
     width: 100%;
     background-color: gray;
+}
 
+form {
+    grid-column: 2;
+    height: 35vh;
+    width: 100%;
+    background-color: white;
+    align-self: center;
 }
