feat: basic form inputs created.

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ img {
     background-color: gray;
 }
 
-form {
+.form-container {
     grid-column: 2;
     height: 50vh;
     background-color: white;
