--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     body {
       line-height: 1.5;
       -webkit-font-smoothing: antialiased;
+      font-family: Arial, Helvetica, sans-serif;
     }
 
   /* 5. Improve media defaults */
@@ -100,6 +101,20 @@ form {
     padding: 20px;
 }
 
+form > label {
+    margin-top: 15px;
+    font-size: 10px;
+    color: rgb(70, 70, 70);
+    font-weight: bold;
+}
+
+label > input {
+    border: solid lightgrey 1px;
+    padding: 5px;
+    font-size: 16px;
+    font-weight: 100;
+}
+
 #first-name, #email, #password {
     display: block;
     grid-column: 1;
@@ -108,4 +123,15 @@ form {
 #last-name, #phone-number, #password-confirm {
     display: block;
     grid-column: 2;
+}
+
+.submit {
+    grid-column: 1;
+    min-width: 50%;
+    justify-self: start;
+    margin-top: 20px;
+    padding: 5px;
+    border: solid black 1px;
+    color: white;
+    background-color: rgb(85, 126, 85);
 }
