--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@
     grid-column: 2;
     grid-row: 1;
     width: 80%;
-    padding: 10px;
+    padding: 10px 10px 10px 40px;
     align-self: center;
 }
 
