--- a/style.css
+++ b/style.css
@@ -117,6 +117,11 @@ form {
     padding: 20px;
 }
 
+/* .password-notice {
+    grid-column: 2;
+    color: red;
+} */
+
 form > label {
     margin-top: 15px;
     font-size: 10px;
